--- a/education.html
+++ b/education.html
@@ -289,14 +289,10 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
-        <div class="date date1">2021-2022</div>
+        <div class="date date1">2023-Present</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading">The African Leadership University</h2>
+            <h6>Diploma, Computer Software Engineering</h6>
         </div>
       </div>
    </div> 
@@ -310,38 +306,16 @@
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
         </div>
-        <div class="date date2">2017-2021</div>
+        <div class="date date2">2014-2018</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
+            <h3 class="timelineHeading2">Zagazig University</h3>
+            <h6>BA, Geographic Information Systems (GIS)</h6>
             <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <li>Best undergraduate Researcher</li>
         </div>
       </div>
 
     </div>   
-
-    <!-- Third -->
-
-    <div class="timeline-item">
-
-      <div class="timeline-img"></div>
-
-      <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
-        <div class="date date3">2013-2017</div>
-        <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
-            <h6>High School</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
-        </div>
-      </div>
-    </div>
 
         </div>
       </section>
