--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                             </svg>
                         </a>
                     </div>
+                    <a href="assets/files/resume.pdf" target="_blank" download="Your-Resume-Name.pdf">
+                                  <i class="fas fa-download"></i>
+
+                              </a>
+
                 </div>
             </div>
         </div>
