enhance download icon

--- a/index.html
+++ b/index.html
@@ -105,11 +105,15 @@
                             </svg>
                         </a>
                     </div>
-                    <a href="assets/files/resume.pdf" target="_blank" download="Your-Resume-Name.pdf">
-                                  <i class="fas fa-download"></i>
-
-                              </a>
-
+                    <!-- download resume -->
+                    <a href="assets/files/resume.pdf" 
+                        title= "Download Ahmed's Resume"
+                        class="socialicon" 
+                        style="text-decoration: none;" 
+                        target="_blank" 
+                        download="Ahmed-Abdelkarim_Resume.pdf">
+                        <i class="fas fa-download"></i>
+                    </a>
                 </div>
             </div>
         </div>
